removed md files, gave the body an overflow x hidden to ensure it doesn't overflow

--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,7 @@
     background-size: 18px 18px;
     background-position: 0 0;
     background-attachment: fixed;
+    overflow-x: hidden;
   }
 
   textarea {
